libs/modkit/macros/tests/ui/fail/unknown_capability.rs
use modkit_macros::module;

#[module(name="x", caps=[foo])]
pub struct X;

fn main() {}
